# obol

./: --help  .gitignore  .gitmodules  0001-swrast-disable-auto-vectorization-of-interpolate_co.patch  AUTHORS  CMakeLists.txt  CODE_SURVEY.md  COPYING  COVERAGE.md  COVERAGE_PLAN.md  README.md  REVIEW.md  SbBasic.h.gcov  SbBox3f.h.gcov  SbList.h.gcov  SbPList.h.gcov  SbRWMutex.h.gcov  SbString.h.gcov  SbStringList.h.gcov  SbVec2f.h.gcov  SbVec2s.h.gcov  SbVec3f.h.gcov  SbVec4f.h.gcov  SoCone.cpp.gcov  SoCube.cpp.gcov  SoCylinder.cpp.gcov  SoFaceSet.cpp.gcov  SoField.h.gcov  SoGLMultiTextureCoordinateElement.h.gcov  SoImage.cpp.gcov  SoIndexedFaceSet.cpp.gcov  SoIndexedLineSet.cpp.gcov  SoIndexedMarkerSet.cpp.gcov  SoMFInt32.h.gcov  SoMField.h.gcov  SoPrimitiveVertex.h.gcov  SoSFEnum.h.gcov  SoSFFloat.h.gcov  SoSFInt32.h.gcov  SoSFNode.h.gcov  (+21 more)
Mentor/: 09.4.PickAction.cpp  10.2.setEventCB.cpp  10.6.PickFilterTopLevel.cpp  11.1.ReadFile.cpp  13.7.Rotor.cpp  15.3.AttachManip.cpp  17.2.GLCallback.cpp  CMakeLists.txt  TESTING_GUIDE.md  headless_utils.h  run_image_test.cmake
examples/: CMakeLists.txt  arb8_dragger_example.cpp  modern_api_example.h  osmesa_example.h  qt_obol_example.cpp  qt_obol_widget.h  truncated_cone_example.cpp
examples/Mentor/: 02.1.HelloCone.cpp  02.2.EngineSpin.cpp  02.3.Trackball.cpp  02.4.Examiner.cpp  03.1.Molecule.cpp  03.2.Robot.cpp  03.3.Naming.cpp  04.1.Cameras.cpp  04.2.Lights.cpp  05.1.FaceSet.cpp  05.2.IndexedFaceSet.cpp  05.3.TriangleStripSet.cpp  05.4.QuadMesh.cpp  05.5.Binding.cpp  05.6.TransformOrdering.cpp  06.1.Text.cpp  06.2.Simple3DText.cpp  06.3.Complex3DText.cpp  07.1.BasicTexture.cpp  07.2.TextureCoordinates.cpp  07.3.TextureFunction.cpp  08.1.BSCurve.cpp  08.2.UniCurve.cpp  08.3.BezSurf.cpp  08.4.TrimSurf.cpp  09.1.Print.cpp  09.2.Texture.cpp  09.3.Search.cpp  09.4.PickAction.cpp  09.5.GenSph.cpp  10.1.addEventCB.cpp  10.5.SelectionCB.cpp  10.7.PickFilterManip.cpp  10.8.PickFilterNodeKit.cpp  11.2.ReadString.cpp  12.1.FieldSensor.cpp  12.2.NodeSensor.cpp  12.3.AlarmSensor.cpp  12.4.TimerSensor.cpp  13.1.GlobalFlds.cpp  (+32 more)
examples/fltk/: CMakeLists.txt  cad_large_assembly_viewer.cpp  cad_simulation_viewer.cpp  obol_minimalist_viewer.cpp  obol_viewer.cpp
examples/qt/: CMakeLists.txt  obol_qt_viewer.cpp
src/: CMakeLists.txt  SbBasicP.h  coin-config.cmake.in  coindefs.h  config.h.cmake.in  obol-default.cfg.in  setup.h.cmake.in
src/C/: CoinTidbits.cpp
src/actions/: CMakeLists.txt  SoAction.cpp  SoActionP.h  SoBoxHighlightRenderAction.cpp  SoCallbackAction.cpp  SoGLRenderAction.cpp  SoGetBoundingBoxAction.cpp  SoGlobalSimplifyAction.cpp  SoLineHighlightRenderAction.cpp  SoRayPickAction.cpp  SoRaytraceRenderAction.cpp  SoReorganizeAction.cpp  SoSceneRenderAction.cpp  SoSearchAction.cpp  SoShapeSimplifyAction.cpp  SoSimplifyAction.cpp  SoSubActionP.h  SoWriteAction.cpp
src/base/: CMakeLists.txt  SbBSPTree.cpp  SbBox2d.cpp  SbBox3d.cpp  SbBox3f.cpp  SbBox3i32.cpp  SbBox3s.cpp  SbClip.cpp  SbColor.cpp  SbColor4f.cpp  SbCylinder.cpp  SbDPLine.cpp  SbDPMatrix.cpp  SbDPPlane.cpp  SbDPRotation.cpp  SbDPViewVolume.cpp  SbDict.cpp  SbFont.cpp  SbImage.cpp  SbImageFormatHandler.cpp  SbImageFormatHandler.h  SbImageResize.h  SbJpegImageHandler.cpp  SbJpegImageHandler.h  SbLine.cpp  SbMatrix.cpp  SbName.cpp  SbOctTree.cpp  SbPlane.cpp  SbRotation.cpp  SbSphere.cpp  SbString.cpp  SbTesselator.cpp  SbTime.cpp  SbUtf8.h  SbVec2b.cpp  SbVec2d.cpp  SbVec2f.cpp  SbVec2i32.cpp  SbVec2s.cpp  (+26 more)
src/bridge/: CMakeLists.txt  obol_bridge.cpp  obol_bridge.h  obol_bridge.map
src/bundles/: CMakeLists.txt  SoMaterialBundle.cpp  SoNormalBundle.cpp  SoTextureCoordinateBundle.cpp
src/caches/: CMakeLists.txt  SoBoundingBoxCache.cpp  SoCache.cpp  SoConvexDataCache.cpp  SoConvexDataCacheEarcutTessellator.h  SoGLCacheList.cpp  SoGLRenderCache.cpp  SoGlyphCache.cpp  SoGlyphCache.h  SoNormalCache.cpp  SoPrimitiveVertexCache.cpp  SoShaderProgramCache.cpp  SoShaderProgramCache.h  SoVBOCache.h  earcut.hpp
src/cad/: CMakeLists.txt  CadFramePlan.h  CadGLCaps.cpp  CadGLCaps.h  CadGpuResources.cpp  CadGpuResources.h  CadIds.cpp  CadRendererGL.cpp  CadRendererGL.h  SoCADAssembly.cpp  SoCADDetail.cpp
src/details/: CMakeLists.txt  SoDetail.cpp  SoNodeKitDetail.cpp
src/doc/: CMakeLists.txt  Coin_books.dox  Coin_modules.dox
src/draggers/: CMakeLists.txt  SoCenterballDragger.cpp  SoDirectionalLightDragger.cpp  SoDragPointDragger.cpp  SoDragger.cpp  SoHandleBoxDragger.cpp  SoJackDragger.cpp  SoPointLightDragger.cpp  SoRotateCylindricalDragger.cpp  SoRotateDiscDragger.cpp  SoRotateSphericalDragger.cpp  SoScale1Dragger.cpp  SoScale2Dragger.cpp  SoScale2UniformDragger.cpp  SoScaleUniformDragger.cpp  SoSpotLightDragger.cpp  SoTabBoxDragger.cpp  SoTabPlaneDragger.cpp  SoTrackballDragger.cpp  SoTransformBoxDragger.cpp  SoTransformerDragger.cpp  SoTranslate1Dragger.cpp  SoTranslate2Dragger.cpp
src/elements/: CMakeLists.txt  SoAccumulatedElement.cpp  SoAmbientColorElement.cpp  SoBumpMapCoordinateElement.cpp  SoBumpMapMatrixElement.cpp  SoCacheElement.cpp  SoCacheHintElement.cpp  SoContextManagerElement.cpp  SoCoordinateElement.cpp  SoCreaseAngleElement.cpp  SoCullElement.cpp  SoDepthBufferElement.cpp  SoDiffuseColorElement.cpp  SoElement.cpp  SoEmissiveColorElement.cpp  SoEnvironmentElement.cpp  SoFloatElement.cpp  SoFontNameElement.cpp  SoInt32Element.cpp  SoLazyElement.cpp  SoLightAttenuationElement.cpp  SoLightModelElement.cpp  SoLinePatternElement.cpp  SoLocalBBoxMatrixElement.cpp  SoModelMatrixElement.cpp  SoMultiTextureCoordinateElement.cpp  SoMultiTextureEnabledElement.cpp  SoMultiTextureImageElement.cpp  SoOverrideElement.cpp  SoProfileCoordinateElement.cpp  SoReplacedElement.cpp  SoShapeStyleElement.cpp  SoShininessElement.cpp  SoSpecularColorElement.cpp  SoTextureCombineElement.cpp  SoTextureOverrideElement.cpp  SoTextureScalePolicyElement.h  (+5 more)
tests/: CMakeLists.txt  generate_control_images.sh  obol_render.cpp  obol_test.cpp  obol_unittest.cpp  obol_viewer.cpp  run_image_test.cmake  test_actions.cpp  test_hardcopy.cpp  test_hud.cpp  test_legacy_integration.cpp
(+1502 files in other folders)
